# nanocode

./: .gitignore  README.md  pyproject.toml
nanocode/: __init__.py  checkpoint_manager.py  common.py  configurator.py  dataloader.py  dataset.py  engine.py  execution.py  fim.py  gpt.py  loss_eval.py  optim.py  tokenizer.py
runs/: speedrun.sh
scripts/: base_eval.py  base_train.py  code_cli.py  code_eval.py  code_sft.py  tok_eval.py  tok_train.py
tasks/: __init__.py  common.py  humaneval.py  mbpp.py
